--- a/sliderule_dsi_json_exercise.ipynb
+++ b/sliderule_dsi_json_exercise.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -228,6 +228,91 @@
    ],
    "source": [
     "# further populate tables created from nested element\n",
+    "json_normalize(data, 'counties', ['state', 'shortname', ['info', 'governor']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>population</th>\n",
+       "      <th>state</th>\n",
+       "      <th>info.governor</th>\n",
+       "      <th>shortname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dade</td>\n",
+       "      <td>12345</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Rick Scott</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Broward</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Rick Scott</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Palm Beach</td>\n",
+       "      <td>60000</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>Rick Scott</td>\n",
+       "      <td>FL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Summit</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>John Kasich</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cuyahoga</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>John Kasich</td>\n",
+       "      <td>OH</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name  population    state info.governor shortname\n",
+       "0        Dade       12345  Florida    Rick Scott        FL\n",
+       "1     Broward       40000  Florida    Rick Scott        FL\n",
+       "2  Palm Beach       60000  Florida    Rick Scott        FL\n",
+       "3      Summit        1234     Ohio   John Kasich        OH\n",
+       "4    Cuyahoga        1337     Ohio   John Kasich        OH"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "json_normalize(data, 'counties', ['state', 'shortname', ['info', 'governor']])"
    ]
   },
@@ -588,6 +673,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "countryshortname\n",
+       "Indonesia             19\n",
+       "China                 19\n",
+       "Vietnam               17\n",
+       "India                 16\n",
+       "Yemen, Republic of    13\n",
+       "Nepal                 12\n",
+       "Bangladesh            12\n",
+       "Morocco               12\n",
+       "Mozambique            11\n",
+       "Africa                11\n",
+       "Name: countryshortname, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_json('data/world_bank_projects.json')\n",
+    "df.countryshortname.groupby(df.countryshortname).count().sort_values(ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#json_normalize('data/world_bank_projects.json', 'mjtheme_namecode', ['code', 'name'])\n",
+    "dataString = json.load(open('data/world_bank_projects.json'))\n",
+    "data = json_normalize(dataString, 'mjtheme_namecode')\n",
+    "data.loc[data.code == '11', 'name'] = 'Environment and natural resources management'\n",
+    "data.loc[data.code == '1', 'name'] = 'Economic management'\n",
+    "data.loc[data.code == '10', 'name'] = 'Rural development'\n",
+    "data.loc[data.code == '2', 'name'] = 'Public sector governance'\n",
+    "data.loc[data.code == '3', 'name'] = 'Rule of Law'\n",
+    "data.loc[data.code == '4', 'name'] = 'Financial and private sector development'\n",
+    "data.loc[data.code == '5', 'name'] = 'Trade and integration'\n",
+    "data.loc[data.code == '6', 'name'] = 'Social protection and risk management'\n",
+    "data.loc[data.code == '7', 'name'] = 'Social dev/gender/inclusion'\n",
+    "data.loc[data.code == '8', 'name'] = 'Human development'\n",
+    "data.loc[data.code == '9', 'name'] = 'Urban development'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Environment and natural resources management    250\n",
+       "Rural development                               216\n",
+       "Human development                               210\n",
+       "Public sector governance                        199\n",
+       "Social protection and risk management           168\n",
+       "Financial and private sector development        146\n",
+       "Social dev/gender/inclusion                     130\n",
+       "Trade and integration                            77\n",
+       "Urban development                                50\n",
+       "Economic management                              38\n",
+       "Rule of Law                                      15\n",
+       "Name: name, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.name.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6137cde4893c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -597,22 +896,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
